@@ -15,7 +15,6 @@ import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.Collections;
-import java.util.List;
 
 @Component
 public class JwtFilter extends OncePerRequestFilter {
@@ -29,13 +28,20 @@ public class JwtFilter extends OncePerRequestFilter {
     @Override
     protected void doFilterInternal(HttpServletRequest request,
                                     HttpServletResponse response,
-                                    FilterChain filterChain) throws ServletException, IOException {
+                                    FilterChain filterChain)
+            throws ServletException, IOException {
+
+        String path = request.getRequestURI();
+
+        if (path.contains("/Token/signup") || path.contains("/Token/login")) {
+            filterChain.doFilter(request, response);
+            return;
+        }
 
         final String authHeader = request.getHeader("Authorization");
         String mobile = null;
         String jwt = null;
 
-        // ✅ Token header से निकाले
         if (authHeader != null && authHeader.startsWith("Bearer ")) {
             jwt = authHeader.substring(7);
             try {
@@ -45,22 +51,21 @@ public class JwtFilter extends OncePerRequestFilter {
             }
         }
 
-        // ✅ अगर mobile मिला और context खाली है
         if (mobile != null && SecurityContextHolder.getContext().getAuthentication() == null) {
             Users user = repo.findByMobile(mobile).orElse(null);
 
             if (user != null && jwtUtil.validateToken(jwt)) {
-                // ✅ Authentication object बनाए जिसमें getName() = mobile होगा
                 UsernamePasswordAuthenticationToken authToken =
                         new UsernamePasswordAuthenticationToken(
-                                mobile, // principal (authentication.getName() यही return करेगा)
+                                mobile,
                                 null,
-                                List.of(()->"ROLE_USER")// authorities खाली रखो (तुम roles manually check कर रहे हो)
+                                Collections.emptyList()
                         );
 
                 authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
-
                 SecurityContextHolder.getContext().setAuthentication(authToken);
+
+                System.out.println("Authenticated user: " + mobile);
             }
         }
 
